# ml_pipeline

./: .env  .env.example  .gitignore  ARCHITECTURE.md  BUILD_STATUS.md  CLAUDE.md  DIAGNOSTICS.md  DIAGRAMS.md  Dockerfile.airflow  Dockerfile.mlflow  QUICK_REFERENCE.md  README.md  TESTING.md  docker-compose.yml  pyproject.toml
config/: cleaning.yaml  features.yaml  models.yaml  orchestration.yaml  pipeline.yaml
config/base/: defaults.yaml
config/bioinfo_gene/: cleaning.yaml  features.yaml  models.yaml  orchestration.yaml  pipeline.yaml
config/biomedical_clinical/: README.md  cleaning.yaml  features.yaml  models.yaml  orchestration.yaml  pipeline.yaml
config/healthcare/: features.yaml  models.yaml  pipeline.yaml
config/hospital_readmission_lagged/: cleaning.yaml  features.yaml  models.yaml  orchestration.yaml  pipeline.yaml
config/nginx/: reports.conf
dags/: dag_factory.py  pipeline.py
diagrams/: 01-architecture.html  02-data-flow.html  03-system-topology.html  04-dag-task-graph.html  05-champion-challenger-regression-check.html
docs/design/: 2026-07-03-champion-challenger-regression-check-design.md
reports/biomedical_clinical/: 2026-06-14_FY_2026_HAC_Reduction_Program_Hospital_profile.html  2026-06-14_FY_2026_Hospital_Readmissions_Reduction_Program_Hospital_profile.html  2026-06-14_unsupervised.yaml  2026-06-21_FY_2026_HAC_Reduction_Program_Hospital_profile.html  2026-06-21_FY_2026_Hospital_Readmissions_Reduction_Program_Hospital_profile.html  2026-06-21_unsupervised.yaml  2026-06-27_FY_2026_HAC_Reduction_Program_Hospital_profile.html  2026-06-27_FY_2026_Hospital_Readmissions_Reduction_Program_Hospital_profile.html  2026-06-27_unsupervised.yaml  2026-06-28_FY_2024_Hospital_Readmissions_Reduction_Program_Hospital_profile.html  2026-06-28_evaluation.yaml  2026-06-28_unsupervised.yaml  2026-06-29_FY_2024_Hospital_Readmissions_Reduction_Program_Hospital_profile.html  2026-06-29_unsupervised.yaml  2026-07-01_FY_2024_Hospital_Readmissions_Reduction_Program_Hospital_profile.html  2026-07-01_unsupervised.yaml  2026-07-02_FY_2024_Hospital_Readmissions_Reduction_Program_Hospital_profile.html  2026-07-02_evaluation.yaml  2026-07-02_unsupervised.yaml  2026-07-03_FY_2024_Hospital_Readmissions_Reduction_Program_Hospital_profile.html  2026-07-03_drift_report.html  2026-07-03_evaluation.yaml  2026-07-03_unsupervised.yaml  2026-07-05_FY_2024_Hospital_Readmissions_Reduction_Program_Hospital_profile.html  2026-07-05_drift_report.html  2026-07-05_evaluation.yaml  (+5 more)
scripts/: __init__.py  analyze_models.py  diagnose_pipeline.py  stage_hospital_readmission_lagged_landing.py
src/: benchmark.py  clean.py  evaluate.py  explore.py  features.py  ingest.py  monitoring.py  profile.py  serve.py  train.py  validate.py
tests/: test_benchmark.py  test_config.py  test_evaluate.py  test_io.py  test_monitoring.py  test_pipeline.py  test_schemas.py  test_serve.py  test_stage_hospital_readmission_lagged_landing.py
(+31 files in other folders)
