[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-pipeline"
version = "0.1.0"
description = "End-to-end ML pipeline POC with Apache Airflow, MLflow, and FastAPI"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Vicky Guo", email = "vicky.guo97@gmail.com"}
]
license = {text = "MIT"}

dependencies = [
    # Core data processing
    "pandas>=2.1.0,<2.2",
    "numpy>=1.24.0,<2.0",
    # Data validation
    "pandera[io]>=0.18.0,<0.19",
    # EDA and profiling
    "ydata-profiling>=4.0.0,<5.0",
    # ML models
    "scikit-learn>=1.3.0,<1.4",
    "lightgbm>=4.0.0,<5.0",
    # MLflow tracking and registry
    "mlflow>=3.1.0,<4.0",
    # Drift monitoring
    "evidently>=0.4.0,<0.5",
    # Configuration and secrets
    "pydantic>=2.5.0,<3.0",
    "pyyaml>=6.0,<7.0",
    # FastAPI serving
    "fastapi>=0.111.0,<0.120",
    "uvicorn[standard]>=0.24.0",
    # Airflow orchestration
    "apache-airflow>=2.10.0,<2.11",
    "apache-airflow-providers-postgres>=5.10.0,<6.0",
    # Statistical transforms (Box-Cox) and multicollinearity (VIF)
    "scipy>=1.11.0,<2.0",
    "statsmodels>=0.14.0,<1.0",
    # Utilities
    "setuptools>=70.0,<72",
    "pandas-stubs~=2.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0",
    "pytest-cov>=4.1.0,<5.0",
    "black>=23.11.0,<24.0",
    "ruff>=0.1.0,<0.2",
    "mypy>=1.7.0,<2.0",
    "types-pyyaml>=6.0,<7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ""
pythonpath = ["."]

[tool.coverage.run]
branch = true
omit = [
    "*/site-packages/*",
    "*/distutils/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by black)
    "W191",   # indentation contains tabs
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pandera.*",
    "ydata_profiling.*",
    "lightgbm.*",
    "evidently.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
]
